# atomicx

./: AGENTS.md  Cargo.toml  DOCS.md  LICENSE  README.md  atomicx.pyi  feo3mics.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: exposure.rs  lib.rs
tests/: test_atomics.py
