[package]
name = "atomicx"
version = "0.0.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "atomicx"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.3"
portable-atomic = { version = "1.9.0", features = ["std", "float"] }
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3", "abi3-py37"] }
