[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "atomicx"
description = "easy-to-use lock-free atomic integers and booleans for multithreading"
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
authors = [
    {name = "RuneBlaze", email = "liubaqiao@gmail.com"},
]

[project.urls]
"Homepage" = "https://github.com/RuneBlaze/atomicx"
"Bug Tracker" = "https://github.com/RuneBlaze/atomicx/issues"
"Documentation" = "https://github.com/RuneBlaze/atomicx/blob/main/DOCS.md"